--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "chart.js": "^2.1.6",
-    "vue": "^1.0.21"
+    "vue": "^2.0.0-rc.1"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
+    "babel-core": "^6.10.4",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -75,11 +75,11 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.3.0",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^9.3.0",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3"
