✨ Add prepublish command to package.json for np

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "prepublish": "node build/build.js"
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
