--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "babel-runtime": "^6.11.6",
     "chart.js": "^2.2.1",
-    "vue": "^2.0.0-rc.1"
+    "vue": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -39,21 +39,21 @@
     "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^2.1.5",
-    "css-loader": "^0.23.0",
-    "eslint": "^2.10.2",
-    "eslint-config-standard": "^5.1.0",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.7.0",
+    "eslint-config-standard": "^6.2.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
+    "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.12.0",
+    "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
@@ -63,15 +63,15 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.24",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "lodash": "^4.15.0",
     "lolex": "^1.4.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.1.0",
     "nightwatch": "^0.8.18",
     "ora": "^0.2.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "selenium-server": "2.53.0",
+    "selenium-server": "^2.53.1",
     "shelljs": "^0.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
