--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
+    "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
