--- a/package.json
+++ b/package.json
@@ -91,5 +91,10 @@
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^1.1.1"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
