--- a/package.json
+++ b/package.json
@@ -36,35 +36,42 @@
     "Wrapper",
     "Charts"
   ],
-  "main": "src/index.js",
+  "main": "dist/vue-chartjs.js",
   "unpkg": "dist/vue-chartjs.js",
+  "module": "es/index.js",
+  "jsnext:main": "es/index.js",
   "files": [
     "src",
-    "dist"
+    "dist",
+    "es"
   ],
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "yarn run release && yarn run build:es",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js"
+    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js",
+    "prepublish": "yarn run lint && yarn run test && yarn run build"
   },
   "dependencies": {
     "chart.js": "^2.5.0",
     "vue": "^2.2.1"
   },
   "devDependencies": {
-    "babel-runtime": "^6.23.0",
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
+    "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.2",
     "eslint": "^3.7.1",
@@ -72,8 +79,8 @@
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -107,7 +114,7 @@
     "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^11.1.3",
+    "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^1.13.2",
