--- a/package.json
+++ b/package.json
@@ -62,65 +62,65 @@
     "vue": "^2.2.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
-    "chromedriver": "^2.21.2",
+    "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
-    "cross-env": "^3.1.4",
-    "cross-spawn": "^5.0.1",
+    "cross-env": "^3.2.4",
+    "cross-spawn": "^5.1.0",
     "css-loader": "^0.27.3",
-    "eslint": "^3.7.1",
+    "eslint": "^3.17.1",
     "eslint-config-standard": "^7.0.1",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.3.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.2",
-    "inject-loader": "^3.0.0-beta2",
+    "http-proxy-middleware": "^0.17.4",
+    "inject-loader": "^3.0.0-beta4",
     "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
+    "karma": "^1.5.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.4.0",
+    "karma-webpack": "1.8.1",
+    "lolex": "^1.6.0",
     "mocha": "^3.1.0",
-    "nightwatch": "^0.9.8",
+    "nightwatch": "^0.9.13",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.13",
-    "selenium-server": "^3.0.1",
-    "shelljs": "^0.7.4",
-    "sinon": "^1.17.3",
+    "selenium-server": "^3.3.1",
+    "shelljs": "^0.7.7",
+    "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.3",
+    "vue-style-loader": "^2.0.4",
     "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^4.0.0"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-merge": "1.1.1"
   },
   "engines": {
     "node": ">=6.9.0"
@@ -133,6 +133,14 @@
   "browserify": {
     "transform": [
       "babelify"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "extract-text-webpack-plugin",
+      "karma-webpack",
+      "webpack",
+      "webpack-merge"
     ]
   }
 }
