--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "dependencies": {
     "chart.js": "^2.5.0",
     "lodash": "^4.17.4",
-    "vue": "^2.2.5"
+    "vue": "^2.2.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -89,7 +89,7 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.0-beta4",
+    "inject-loader": "^3.0.0",
     "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
@@ -114,9 +114,9 @@
     "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^11.3.2",
-    "vue-style-loader": "^2.0.4",
-    "vue-template-compiler": "^2.2.5",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
+    "vue-template-compiler": "^2.2.6",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
