--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prepublish": "yarn run lint && yarn run test && yarn run build"
   },
   "dependencies": {
+    "isparta": "^4.0.0",
     "lodash.merge": "^4.6.0"
   },
   "peerDependencies": {
@@ -66,7 +67,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "6.4.1",
+    "babel-loader": "7.1.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -90,13 +91,13 @@
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.10.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.0",
-    "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
     "karma": "^1.5.0",
@@ -104,15 +105,18 @@
     "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "1.8.1",
+    "karma-webpack": "2",
     "lolex": "^1.6.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.14",
+    "opn": "^5.1.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.13",
+    "portfinder": "^1.0.13",
     "selenium-server": "^3.3.1",
     "shelljs": "^0.7.7",
     "sinon": "^2.1.0",
@@ -121,16 +125,17 @@
     "vue": "2.5.2",
     "vue-hot-reload-api": "2.1.0",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "12.2.2",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "3.0.1",
     "vue-template-compiler": "2.5.2",
-    "webpack": "^1.13.2",
+    "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "1.1.1"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">=6.9.0"
+    "node": ">=6.9.0",
+    "npm": ">= 3.0.0"
   },
   "babel": {
     "presets": [
