--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-chartjs",
-  "version": "3.0.0",
+  "version": "3.0.1-rc2",
   "description": "Vue.js wrapper for chart.js for creating beautiful charts.",
   "author": "Jakub Juszczak <jakub@posteo.de>",
   "homepage": "http://vue-chartjs.org",
@@ -53,26 +53,21 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js && NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && webpack --progress --hide-modules --config  ./build/webpack.release.full.js && NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.full.min.js",
-    "prepublish": "yarn run lint && yarn run test && yarn run build"
+    "release": "webpack --progress --hide-modules --config  ./build/webpack.release.js && NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js",
+    "prepublishOnly": "yarn run lint && yarn run test && yarn run build"
   },
   "dependencies": {
-    "isparta": "^4.0.0",
     "lodash.merge": "^4.6.0"
   },
   "peerDependencies": {
-    "chart.js": "2.7.0",
-    "vue": "2.5.2"
+    "chart.js": "2.7.x"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.23.0",
+    "@babel/cli": "^7.0.0-beta.31",
+    "@babel/core": "^7.0.0-beta.31",
+    "@babel/preset-env": "^7.0.0-beta.31",
+    "@babel/preset-stage-2": "^7.0.0-beta.31",
+    "babel-loader": "8.0.0-beta.0",
     "chai": "^3.5.0",
     "chart.js": "2.7.0",
     "chromedriver": "^2.28.0",
@@ -98,6 +93,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.0",
+    "isparta": "^4.0.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
     "karma": "^1.5.0",
@@ -136,11 +132,6 @@
   "engines": {
     "node": ">=6.9.0",
     "npm": ">= 3.0.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   },
   "browserify": {
     "transform": [
