--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js",
-    "prepublishOnly": "yarn run lint && yarn run test && yarn run build"
+    "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "peerDependencies": {
     "chart.js": "2.7.x"
@@ -68,7 +70,7 @@
     "@babel/preset-stage-2": "^7.0.0-beta.42",
     "babel-loader": "8.0.0-beta.0",
     "chai": "^3.5.0",
-    "chart.js": "2.7.2",
+    "chart.js": "2.7.3",
     "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.1.1",
@@ -116,12 +118,13 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "url-loader": "^0.5.8",
-    "vue": "2.5.16",
-    "vue-hot-reload-api": "2.3.0",
+    "vue": "2.5.17",
+    "vue-hot-reload-api": "2.3.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.2.1",
-    "vue-style-loader": "4.0.2",
-    "vue-template-compiler": "2.5.16",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.5.17",
+    "vuepress": "^0.14.4",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
