--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "docs:build": "vuepress build docs"
   },
   "peerDependencies": {
-    "chart.js": "2.7.x"
+    "chart.js": "2.8.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
@@ -70,7 +70,7 @@
     "@babel/preset-stage-2": "^7.0.0-beta.42",
     "babel-loader": "8.0.0-beta.0",
     "chai": "^3.5.0",
-    "chart.js": "2.7.3",
+    "chart.js": "^2.8.0",
     "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.1.1",
