--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-stage-2": "^7.0.0-beta.42",
+    "@types/chart.js": "^2.7.55",
     "babel-loader": "8.0.0-beta.0",
     "chai": "^3.5.0",
     "chart.js": "^2.8.0",
