refactor: add conventional changelog (#730)

--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js",
+    "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && standard-version",
     "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "commit": "cz"
   },
   "peerDependencies": {
     "chart.js": ">= 2.5"
@@ -71,15 +72,19 @@
     "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-stage-2": "^7.0.0-beta.42",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/chart.js": "^2.7.55",
     "babel-loader": "8.0.0-beta.0",
     "chai": "^3.5.0",
     "chart.js": "^2.8.0",
     "chromedriver": "^2.28.0",
+    "commitizen": "^4.2.4",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.1.1",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -121,6 +126,7 @@
     "shelljs": "^0.7.7",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
+    "standard-version": "^9.3.2",
     "url-loader": "^0.5.8",
     "vue": "2.5.17",
     "vue-hot-reload-api": "2.3.1",
