refactor: add lint-staged and tests run to git-hooks (#731)
* refactor: add lint-staget and tests run to git-hooks

* refactor: add lint-staged for .ts and .vue files

* refactor: add commit message git hook

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "2",
+    "lint-staged": "^12.1.2",
     "lolex": "^1.6.0",
     "mocha": "^3.1.0",
     "opn": "^5.1.0",
@@ -124,6 +125,7 @@
     "portfinder": "^1.0.13",
     "selenium-server": "^3.3.1",
     "shelljs": "^0.7.7",
+    "simple-git-hooks": "^2.7.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "standard-version": "^9.3.2",
