refactor: add github actions for ci (#732)

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit",
+    "test": "yarn lint && yarn unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && standard-version",
     "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
