refactor: tune linters (#734)
* refactor: add prettier and tune linting configs

* refactor: change .editorconfig

* refactor: fix after review

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "yarn lint && yarn unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "format": "prettier --write src test",
     "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && standard-version",
     "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
     "docs:dev": "vuepress dev docs",
@@ -69,7 +70,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "^7.0.0-beta.42",
+    "@babel/core": "7.5.5",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-stage-2": "^7.0.0-beta.42",
     "@commitlint/cli": "^15.0.0",
@@ -85,15 +86,19 @@
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^3.19.0",
+    "eslint": "7.28.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^8.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^3.0.1",
@@ -123,6 +128,7 @@
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.13",
     "portfinder": "^1.0.13",
+    "prettier": "2.5.1",
     "selenium-server": "^3.3.1",
     "shelljs": "^0.7.7",
     "simple-git-hooks": "^2.7.0",
