refactor: switch unit tests from karma to jest. (#733)
* refactor: remove karma

* refactor: add config for jest

* refactor: add vue wrappers for chart examples

* refactor: fix linting errors at vue components

* refactor: rewrite unit tests to jest

* refactor: remove useless e2e test

* refactor: add swc/jest

* refactor: tune configs after merge develop branch

* refactor: remove semicolons

* refactor: remove unused packeges and not staged files linting

* style: format babelrc

* fix: fix endless tests

* chore: cleanup package.json

* chore: gitignore mod

* chore: cleanup jest config

* chore: cleanup package.json

* style: remove useless dir hierarchy

* chore: fix gitignore

Co-authored-by: dangreen <danon0404@gmail.com>

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,23 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "modules": false,
-      "targets": {
-        "browsers": [
-          "last 2 versions"
-        ]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": [
+            "last 2 versions"
+          ]
+        }
       }
-    }],
-    ["@babel/stage-2",{"decoratorsLegacy":true}]
+    ]
   ],
-  "comments": false
+  "comments": false,
+  "env": {
+    "test": {
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs"
+      ]
+    }
+  }
 }
