--- a/package.json
+++ b/package.json
@@ -51,10 +51,9 @@
     "dev": "node build/dev-server.js",
     "build": "yarn run release && yarn run build:es",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
+    "unit": "jest -c jest.config.json",
     "test": "yarn lint && yarn unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "lint": "eslint --ext .js,.vue src test",
     "format": "prettier --write src test",
     "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && standard-version",
     "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
@@ -75,11 +74,14 @@
     "@babel/preset-stage-2": "^7.0.0-beta.42",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@swc/core": "^1.2.120",
+    "@swc/jest": "^0.2.15",
     "@types/chart.js": "^2.7.55",
+    "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^27.0.0-alpha.4",
+    "babel-jest": "^27.4.4",
     "babel-loader": "8.0.0-beta.0",
-    "chai": "^3.5.0",
     "chart.js": "^2.8.0",
-    "chromedriver": "^2.28.0",
     "commitizen": "^4.2.4",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.1.1",
@@ -108,61 +110,27 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.0",
-    "isparta": "^4.0.0",
-    "jasmine-core": "^2.5.2",
+    "jest": "^27.4.3",
+    "jest-canvas-mock": "^2.3.1",
     "json-loader": "^0.5.4",
-    "karma": "^1.5.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "2",
     "lint-staged": "^12.1.2",
-    "lolex": "^1.6.0",
-    "mocha": "^3.1.0",
     "opn": "^5.1.0",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.13",
     "portfinder": "^1.0.13",
     "prettier": "2.5.1",
-    "selenium-server": "^3.3.1",
     "shelljs": "^0.7.7",
     "simple-git-hooks": "^2.7.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
     "standard-version": "^9.3.2",
     "url-loader": "^0.5.8",
-    "vue": "2.5.17",
+    "vue": "2.6.14",
     "vue-hot-reload-api": "2.3.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.2.1",
     "vue-style-loader": "4.1.2",
-    "vue-template-compiler": "2.5.17",
+    "vue-template-compiler": "2.6.14",
     "vuepress": "^0.14.4",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
     "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">=6.9.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  },
-  "greenkeeper": {
-    "ignore": [
-      "extract-text-webpack-plugin",
-      "karma-webpack",
-      "webpack",
-      "webpack-merge"
-    ]
   }
 }
