--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,13 +1,5 @@
 {
   "env": {
-    "mocha": true
-  },
-  "globals": {
-    "expect": true,
-    "jasmine": true,
-    "sinon": true
-  },
-  "rules": {
-    "no-unused-expressions": 0
+    "jest": true
   }
 }
