--- a/package.json
+++ b/package.json
@@ -69,9 +69,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "7.5.5",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-stage-2": "^7.0.0-beta.42",
+    "@babel/core": "7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@swc/core": "^1.2.120",
@@ -79,8 +78,8 @@
     "@types/chart.js": "^2.7.55",
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.4",
-    "babel-jest": "^27.4.4",
-    "babel-loader": "8.0.0-beta.0",
+    "babel-jest": "^27.4.5",
+    "babel-loader": "8.2.3",
     "chart.js": "^2.8.0",
     "commitizen": "^4.2.4",
     "connect-history-api-fallback": "^1.1.0",
