test: create test examples and change test actions (#747)
* refactor: create test examples and change test actions

* refactor: remove chart examples from src

* chore(release): 3.5.2

* refactor: remove dev settings

* refactor: remove changes from changelog

* refactor: remove version change

* refactor: change coverage folders

--- a/jest.config.json
+++ b/jest.config.json
@@ -19,10 +19,7 @@
       }
     ]
   },
-  "moduleNameMapper": {
-    "^@/(.*)$": "<rootDir>/src/$1"
-  },
   "collectCoverage": true,
-  "collectCoverageFrom": ["<rootDir>/src/examples/components/**"],
+  "collectCoverageFrom": ["<rootDir>/src/**/*"],
   "coverageReporters": ["lcovonly", "text"]
 }
