--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "Wrapper",
     "Charts"
   ],
-  "main": "dist/vue-chartjs.js",
-  "unpkg": "dist/vue-chartjs.min.js",
-  "module": "es/index.js",
+  "main": "dist/vue-chartjs.cjs",
+  "module": "dist/vue-chartjs.mjs",
   "jsnext:main": "es/index.js",
   "typings": "types/index.d.ts",
   "files": [
@@ -48,13 +47,13 @@
     "types/*.d.ts"
   ],
   "scripts": {
-    "build": "yarn run release && yarn run build:es",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "emitDeclarations": "tsc --skipLibCheck --emitDeclarationOnly",
+    "build": "rollup -c & yarn emitDeclarations",
     "unit": "jest -c jest.config.json",
     "test": "yarn lint && yarn unit",
     "lint": "eslint --ext .js,.vue src test",
     "format": "prettier --write src test",
-    "release": "cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.js && cross-env NODE_ENV=production webpack --progress --hide-modules --config  ./build/webpack.release.min.js && standard-version",
+    "release": "standard-version",
     "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
@@ -68,34 +67,32 @@
     "@types/chart.js": "^2.7.55"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.42",
     "@babel/core": "7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@storybook/addon-actions": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.13",
     "@storybook/vue": "^6.4.12",
     "@swc/core": "^1.2.120",
+    "@swc/helpers": "^0.3.2",
     "@swc/jest": "^0.2.15",
     "@types/chart.js": "^2.7.55",
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.4.5",
     "babel-loader": "8.2.3",
+    "browserslist": "^4.19.1",
     "chart.js": "^2.8.0",
     "commitizen": "^4.2.4",
-    "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^5.1.1",
-    "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-prettier": "^4.0.0",
@@ -103,36 +100,21 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^8.2.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^0.10.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.0",
     "jest": "^27.4.3",
     "jest-canvas-mock": "^2.3.1",
-    "json-loader": "^0.5.4",
     "lint-staged": "^12.1.2",
-    "opn": "^5.1.0",
-    "portfinder": "^1.0.13",
     "prettier": "2.5.1",
-    "shelljs": "^0.7.7",
+    "rollup": "^2.66.1",
+    "rollup-plugin-swc": "^0.2.0",
+    "rollup-plugin-vue": "^6.0.0",
     "simple-git-hooks": "^2.7.0",
     "standard-version": "^9.3.2",
-    "url-loader": "^0.5.8",
     "vue": "2.6.14",
     "vue-hot-reload-api": "2.3.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.6.14",
-    "vuepress": "^0.14.4",
-    "webpack": "^3.7.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "^4.1.0"
+    "vuepress": "^0.14.4"
   }
 }
