refactor: move from yarn to pnpm (#751)

--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
   ],
   "scripts": {
     "emitDeclarations": "tsc --skipLibCheck --emitDeclarationOnly",
-    "build": "rollup -c & yarn emitDeclarations",
+    "build": "rollup -c & pnpm emitDeclarations",
     "unit": "jest -c jest.config.json",
-    "test": "yarn lint && yarn unit",
+    "test": "pnpm lint && pnpm unit",
     "lint": "eslint --ext .js,.vue src test",
     "format": "prettier --write src test",
     "release": "standard-version",
-    "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
+    "prepublishOnly": "pnpm lint && pnpm test && pnpm build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "commit": "cz",
