feat: vue2 legacy support (#771)
* feat: create legacy charts for vue2 projects

* feat: add configs for legacy folder

* feat: change project configs

* feat: add tests for legacy charts

* feat: fix utils

* feat: fix base charts tests syntax

* feat: add sandboxes for vue2 charts

* fix: remove legacy prefix from vue2 components

* fix: change build configs

* fix: fix ci tests config

* feat: update build config and tune package folders

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
+      - name: Install dependencies to legacy folder
+        working-directory: legacy
+        run: pnpm install
       - name: Run tests
         run: pnpm test
