chore: tune some files (#778)
* chore: remove unused configs and tune codecov settings

* chore: update package.json and fix license

--- a/codecov.yml
+++ b/codecov.yml
@@ -24,7 +24,10 @@ coverage:
 
   ignore:
     - "tests/*"
-    - "src/mixins/*"
+    - "sandboxes/*"
+    - "stories/*"
+    - "legacy/sandboxes/*"
+    - "legacy/test/*"
 
 
 comment:
