--- a/sandboxes/reactive/package.json
+++ b/sandboxes/reactive/package.json
@@ -1,9 +1,12 @@
 {
   "name": "vue-chartjs-reactive-example",
   "dependencies": {
-    "vue": "^3.2.31",
     "chart.js": "3.7.0",
-    "vue-chartjs": "3.5.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vue": "^3.2.31",
+    "vue-chartjs": "4.0.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0"
   }
 }
