chore(deps): update dev dependencies and tune renovate config (#891)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,7 @@
   "extends": [
     "config:base",
     ":preserveSemverRanges"
-  ]
+  ],
+  "ignoreDeps": ["vue"],
+  "ignorePaths": ["**/legacy/**"]
 }
