--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vue-chartjs",
   "version": "4.1.1",
-  "packageManager": "pnpm@7.5.0",
   "description": "Vue.js wrapper for chart.js for creating beautiful charts.",
   "author": "Jakub Juszczak <jakub@posteo.de>",
   "homepage": "http://vue-chartjs.org",
@@ -76,15 +75,17 @@
     "vue": "^3.0.0-0 || ^2.6.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
+    "@babel/core": "7.18.6",
     "@babel/preset-env": "^7.16.5",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@size-limit/preset-big-lib": "^7.0.8",
-    "@storybook/addon-actions": "^6.4.12",
-    "@storybook/addon-essentials": "^6.4.13",
-    "@storybook/vue3": "^6.4.19",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/vue3": "^6.5.9",
     "@swc/core": "^1.2.120",
     "@swc/helpers": "^0.4.0",
     "@swc/jest": "^0.2.15",
@@ -102,27 +103,28 @@
     "cross-env": "^7.0.0",
     "cz-conventional-changelog": "3.3.0",
     "del-cli": "^4.0.1",
-    "eslint": "8.17.0",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard": "^17.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-prettier-vue": "^4.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "jest": "^27.4.3",
     "jest-canvas-mock": "^2.3.1",
     "lint-staged": "^13.0.0",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "rollup": "^2.66.1",
     "rollup-plugin-swc": "^0.2.0",
     "simple-git-hooks": "^2.7.0",
     "simple-github-release": "^1.0.0",
     "size-limit": "^7.0.8",
     "standard-version": "^9.3.2",
-    "tsd": "^0.20.0",
+    "tsd": "^0.22.0",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vue": "^3.2.31",
