chore(deps): update eslint-plugin-prettier to 4.2.1 (#894)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,6 +3,6 @@
     "config:base",
     ":preserveSemverRanges"
   ],
-  "ignoreDeps": ["vue"],
+  "ignoreDeps": ["vue", "eslint-plugin-prettier-vue"],
   "ignorePaths": ["**/legacy/**"]
 }
