--- a/package.json
+++ b/package.json
@@ -110,8 +110,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-prettier-vue": "^4.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier-vue": "3.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "jest": "^27.4.3",
