docs: update chart.js version at sandboxes package.json (#905)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,5 @@
     ":preserveSemverRanges"
   ],
   "ignoreDeps": ["vue", "eslint-plugin-prettier-vue"],
-  "ignorePaths": ["**/legacy/**"]
+  "ignorePaths": ["**/legacy/**", "**/sandboxes/**"]
 }
